# noticias-ia-

./: .env.example  .gitignore  README.md  pyproject.toml
scripts/: smoke.py
src/noticias/: __main__.py  _project_root.py
src/noticias/cli/: __init__.py  app.py  fuentes.py  health.py
src/noticias/llm/: __init__.py  client.py  parser.py  prompt.py
src/noticias/models/: __init__.py  cluster.py  item.py  snapshot.py  source.py
src/noticias/persistence/: snapshot.py
src/noticias/pipeline/: __init__.py  cluster.py  content_filter.py  dedup.py  embed.py  event_label.py  family.py  fetch.py  options.py  orchestrator.py  tokenize.py  topic_filter.py  window.py
src/noticias/render/: console.py
src/noticias/trust/: label.py  (+1 more)
tests/: conftest.py  helpers.py
tests/component/: test_fetch.py  test_fuentes_cli.py  test_health.py  test_orchestrator.py  test_orchestrator_with_filters.py  test_resumen.py  test_snapshot_cli.py
tests/integration/: test_end_to_end.py
tests/unit/: test_adapter.py  test_canonical_url.py  test_cli_fuentes_list.py  test_cluster.py  test_config_path.py  test_content_filter.py  test_dedup.py  test_embed.py  test_event_label.py  test_family_format.py  test_fuentes_reset.py  test_llm_client.py  test_models.py  test_options.py  test_orchestrator.py  test_orchestrator_budget.py  test_parser.py  test_prompt.py  test_render.py  test_run_pipeline.py  test_snapshot_persistence.py  test_source_registry.py  test_stub_llm_client.py  test_template_summary.py  test_tokenize.py  test_topic_filter.py  test_trust.py  test_trust_calibration.py  test_window.py
(+4 files in other folders)
