[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "noticias-ia"
version = "0.1.0"
description = "Personal CLI news aggregator that cross-references Argentinian RSS sources and uses a cheap LLM to write structured daily summaries"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Dante", email = "dantecruz4@gmail.com"},
]

dependencies = [
    "typer>=0.12.0",
    "httpx>=0.27.0",
    "feedparser>=6.0.0",
    "rapidfuzz>=3.9.0",
    "litellm>=1.40.0",
    "rich>=13.0.0",
    "msgspec>=0.18.0",
    "python-dotenv>=1.0.0",
    "fastembed>=0.8.0",
]

[project.scripts]
noticias = "noticias.cli.app:app"

[project.urls]
Homepage = "https://github.com/Dant3xC/noticias-ia-"

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "respx>=0.21.0",
    "ruff>=0.4.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/noticias"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "integration: end-to-end integration tests that exercise the full pipeline",
]
